--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "chart.js": "^2.7.2",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.3.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
