--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "chart.js": "^2.7.2",
+    "joi": "^13.4.0",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.3.2",
