--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ediary",
   "version": "1.0.0",
   "description": "Ediary spa",
-  "author": "CheckthestatisticsBruv <34718571+CheckthestatisticsBruv@users.noreply.github.com>",
+  "author": "Adam Lewkowicz",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
