--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "chart.js": "^2.7.2",
     "joi": "^13.4.0",
     "moment": "^2.22.2",
-    "vue": "^2.5.2",
     "vue-chartjs": "^3.3.2",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -67,10 +65,12 @@
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue": "^2.5.16",
     "vue-jest": "^1.0.2",
     "vue-loader": "^14.2.2",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
